feat: add first name and last name to register method
