# api/openapi.yaml
@@ -307,6 +307,14 @@ components:
     RegisterCredentials:
       type: object
       properties:
+        first_name:
+          type: string
+          description: "User's first name"
+          example: "Larry"
+        last_name:
+          type: string
+          description: "User's last name"
+          example: "King"
         email:
           type: string
           description: "Must be a valid email address."
